--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
               <li><a href="#experience">Experience<span class="sr-only"></span></a></li>
               <li><a href="#adventures">Adventures<span class="sr-only"></span></a></li>
               <li><a href="#about">About<span class="sr-only"></span></a></li>
-              <li><a href="#blog">Blog<span class="sr-only"></span></a></li>
               <li><a href="#contact">Contact<span class="sr-only"></span></a></li>
             </ul><!-- / .nav .navbar-nav -->              
           </div><!--/.navbar-collapse -->
@@ -224,10 +223,10 @@
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
-                  <a href="pages/portfolio/portfolio-single-1.html"><h2 style="color: white">Cuba</h2></a>
+                  <a href="https://www.linkedin.com/in/shray-patel/"><h2 style="color: white">Cuba</h2></a>
                   <p>Havana, Vinales <br>
                   May 10, 2017 - May 17, 2017 </p>
-                  <a href="pages/portfolio/portfolio-single-1.html" class="btn-ghost btn-ghost-light ft-button">View Trip</a>
+                  <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
               </div><!-- / .bg-overlay -->
@@ -238,9 +237,9 @@
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
-                  <a href="pages/portfolio/portfolio-single-1.html"><h3>India</h3></a>
+                  <a href="https://www.linkedin.com/in/shray-patel/"><h3>India</h3></a>
                   <p>Gujarat, Pune, Mumbai, Indore<br> December 26, 2016 - January 16, 2017</p>
-                  <a href="pages/portfolio/portfolio-single-1.html" class="btn-ghost btn-ghost-light ft-button">View Trip</a>
+                  <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
               </div><!-- / .bg-overlay -->
@@ -250,9 +249,9 @@
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
-                  <a href="pages/portfolio/portfolio-single-1.html"><h3>Canada</h3></a>
+                  <a href="https://www.linkedin.com/in/shray-patel/"><h3>Canada</h3></a>
                   <p>Toronto<br> November 19, 2016 - November 21, 2016</p>
-                  <a href="pages/portfolio/portfolio-single-1.html" class="btn-ghost btn-ghost-light ft-button">View Trip</a>
+                  <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
               </div><!-- / .bg-overlay -->
@@ -263,9 +262,9 @@
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
-                  <a href="pages/portfolio/portfolio-single-1.html"><h3>California</h3></a>
+                  <a href="https://www.linkedin.com/in/shray-patel/"><h3>California</h3></a>
                   <p><br> July 15, 2016 - July 19, 2016</p>
-                  <a href="pages/portfolio/portfolio-single-1.html" class="btn-ghost btn-ghost-light ft-button">View Trip</a>
+                  <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
               </div><!-- / .bg-overlay -->
@@ -275,9 +274,9 @@
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
-                  <a href="pages/portfolio/portfolio-single-1.html"><h3>Las Vegas</h3></a>
+                  <a href="https://www.linkedin.com/in/shray-patel/"><h3>Las Vegas</h3></a>
                   <p><br> July 19, 2016 - July 21, 2016</p>
-                  <a href="pages/portfolio/portfolio-single-1.html" class="btn-ghost btn-ghost-light ft-button">View Trip</a>
+                  <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
               </div><!-- / .bg-overlay -->
@@ -288,9 +287,9 @@
               <div class="bg-overlay">
 
                 <div class="content-wrapper">
-                  <a href="pages/portfolio/portfolio-single-1.html"><h3>Colorado</h3></a>
+                  <a href="https://www.linkedin.com/in/shray-patel/"><h3>Colorado</h3></a>
                   <p><br> July 21, 2016 - July 28, 2016</p>
-                  <a href="pages/portfolio/portfolio-single-1.html" class="btn-ghost btn-ghost-light ft-button">View Trip</a>
+                  <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
               </div><!-- / .bg-overlay -->
@@ -391,7 +390,7 @@
               <div class="col-lg-6 no-gap section contact-form">
                 <header class="sec-heading">
                   <h2>Contact</h2>
-                  <span class="subheading">Lorem ipsum dolor sit amet</span>
+                  <span class="subheading">I would love to speak with you!</span>
                 </header>
 
                 <form action="assets/contact-form/contact-form.php" method="POST" class="form-ajax wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
