--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                 <div class="content-wrapper">
                   <a href="https://www.linkedin.com/in/shray-patel/"><h3>California</h3></a>
-                  <p><br> July 15, 2016 - July 19, 2016</p>
+                  <p>Hollywood, Catalina Island, Los Angeles<br> July 15, 2016 - July 19, 2016</p>
                   <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
@@ -275,7 +275,7 @@
 
                 <div class="content-wrapper">
                   <a href="https://www.linkedin.com/in/shray-patel/"><h3>Las Vegas</h3></a>
-                  <p><br> July 19, 2016 - July 21, 2016</p>
+                  <p>"What happens in Vegas..."<br> July 19, 2016 - July 21, 2016</p>
                   <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
@@ -288,7 +288,7 @@
 
                 <div class="content-wrapper">
                   <a href="https://www.linkedin.com/in/shray-patel/"><h3>Colorado</h3></a>
-                  <p><br> July 21, 2016 - July 28, 2016</p>
+                  <p>Rocky Mountains, Garden of the Gods, Highlands Ranch<br> July 21, 2016 - July 28, 2016</p>
                   <a href="https://www.linkedin.com/in/shray-patel/" class="btn-ghost btn-ghost-light ft-button">Interested? Talk to me!</a>
                 </div>
 
